--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body class="bg-background background-texture font-sans" data-sveltekit-preload-data="hover">
+	<body
+		class="bg-background background-texture font-sans overflow-x-hidden"
+		data-sveltekit-preload-data="hover"
+	>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
